made app raw functionality

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "axios": "^0.27.2",
+    "nanoid": "^4.0.0",
+    "react-loader-spinner": "^5.3.4",
     "styled-components": "^5.3.5"
   }
 }
