--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.27.2",
     "nanoid": "^4.0.0",
     "react-loader-spinner": "^5.3.4",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5"
   }
 }
