--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
     "react-loader-spinner": "^5.3.4",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5"
